# resume-parser-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LinuxDockerfile  README.md  alembic.ini  config.txt  curl.txt  debug_entry.py  docker-compose.override.yml  docker-compose.yml  external_markdown.md  profile_results.txt  prompt.txt  pymongo_test.py  pyproject.toml  pytest.ini  requirements.txt  resume.json  tesseract.md  test_logstash.py  worse.json
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
app/: config.py  init_db.py  main.py
app/core/: application.py  auth.py  base.py  cache.py  config.py  database.py  dependencies.py  error_handlers.py  exceptions.py  healthcheck.py  indexes.py  logging_config.py  middleware.py  mongodb.py  rabbitmq_client.py  security.py
app/libs/: text_embedder.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  base.py  resume_repository.py
app/routers/: auth_router.py  healthcheck_router.py  resume_ingestor_router.py
app/schemas/: auth_schemas.py  resume.py  resume_utils.py
app/scripts/: init_db.py
app/services/: llm_formatter.py  output.json  prompt.py  read_azure.py  resume_parser.py  resume_service.py  user_service.py
app/tests/: conftest.py  test_auth_router.py  test_integration.py  test_login_router.py  test_main.py  test_register_router.py  test_resume_ingestor_router.py  test_resume_parser.py  test_resume_router.py  test_resume_service.py  test_security.py  (+1 more)
cv_output/: better.json  both.json  both_resume2.json  fede-resume.json  fico.json  no_intermediary_ai_4o.json  no_intermediary_ai_mini.json  no_intermediary_ai_mini_resume2.json  non_fico.json  resume.json  resume_4o.json  resume_azure_4o.json  resume_easyocr.json  resume_quasi_perfetto.json  resume_wLinks.json
(+9 files in other folders)
