[project]
name = "resume-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ihcsof",email = "lorenzo.foschi.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "bcrypt (==4.2.0)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.4)",
    "fix-busted-json (==0.0.18)",
    "httpx (==0.27.2)",
    "huggingface-hub (==0.26.3)",
    "langchain (==0.3.9)",
    "langchain-community (==0.3.4)",
    "langchain-core (==0.3.21)",
    "langchain-openai (==0.2.10)",
    "loguru (==0.7.2)",
    "motor (==3.6.0)",
    "nest-asyncio (==1.6.0)",
    "openai (==1.55.3)",
    "pdf2image (==1.17.0)",
    "pydantic (==2.9.2)",
    "pydantic-settings (==2.6.1)",
    "pydantic-core (==2.23.4)",
    "pymongo (==4.9.2)",
    "pyparsing (==3.2.0)",
    "pypdf (==5.1.0)",
    "pypdf2 (==3.0.1)",
    "pypdfium2 (==4.30.0)",
    "pytesseract (==0.3.13)",
    "pytest (==8.3.3)",
    "pytest-asyncio (==0.24.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "python-iso639 (==2024.10.22)",
    "python-jose (==3.3.0)",
    "python-magic (==0.4.27)",
    "python-multipart (==0.0.17)",
    "python-oxmsg (==0.0.1)",
    "requests (==2.32.3)",
    "uvicorn (==0.32.0)",
    "pymupdf (==1.25.1)",
    "azure-core (==1.32.0)",
    "azure-ai-documentintelligence (==1.0.0b4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
exclude_dirs = ["app/tests", ".venv"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
